Adjusted SelectBox.less (z-index) for correct cooperation with ScriptArea

--- a/Realization/frontend/czechidm-core/src/components/basic/SelectBox/SelectBox.less
+++ b/Realization/frontend/czechidm-core/src/components/basic/SelectBox/SelectBox.less
@@ -24,6 +24,9 @@
 	 }
   }
 }
+.Select-menu-outer{
+   z-index: 10;
+}
 .has-error {
 		.is-focused{
 				.Select-control{
